[gd_scene load_steps=2 format=3 uid="uid://b4vysyw60saap"]

[ext_resource type="Script" path="res://_abilities/character_abilities/character_handle_weapon_ability.gd" id="1_giy6c"]

[node name="CharacterHandleWeaponAbility" type="Node"]
script = ExtResource("1_giy6c")

[node name="AutoUseTimer" type="Timer" parent="."]

[connection signal="timeout" from="AutoUseTimer" to="." method="_on_auto_use_timer_timeout"]
